<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/felhasznalonev"
            android:inputType="textPersonName"
            android:layout_marginTop="80dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jelszo"
            android:inputType="textPassword"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jelszoujra"
            android:inputType="textPassword"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefonszam"
            android:inputType="phone"
            android:layout_marginTop="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_app_registration_24"
            android:text="@string/regisztracio"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginTop="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visszabejelentkezes"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginTop="12dp" />

    </LinearLayout>
</ScrollView>
